--- a/frontend/src/app/pages/login/forget-password/forget-password.component.html
+++ b/frontend/src/app/pages/login/forget-password/forget-password.component.html
@@ -38,7 +38,7 @@
                               
                               <div>
                                   <h5 class="text-primary"> Reset Password</h5>
-                                  <p class="text-muted">Reset Password with Skote.</p>
+                                  <p class="text-muted">Reset Password with Membra.</p>
                               </div>
   
                               <div class="mt-4">
