--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                               
                               <div>
                                   <h5 class="text-primary">Welcome Back !</h5>
-                                  <p class="text-muted">Sign in to continue to Skote.</p>
+                                  <p class="text-muted">Sign in to continue to Membra.</p>
                               </div>
   
                               <div class="mt-4">
@@ -109,7 +109,7 @@
                           </div>
 
                           <div class="mt-4 mt-md-5 text-center">
-                              <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Membra. Crafted with <i class="mdi mdi-heart text-danger"></i> by AdemBenChiboub</p>
                           </div>
                       </div>
                       
