--- a/frontend/src/app/pages/payment/paymentsucces/paymentsucces.component.html
+++ b/frontend/src/app/pages/payment/paymentsucces/paymentsucces.component.html
@@ -1,5 +1,12 @@
-<div class="payment-success-container">
-  <h2>Payment Successful! 🎉</h2>
-  <p>Your account is now under review and will be verified within 48 hours.</p>
-  <button routerLink="/">Return to Home</button>
+<app-homenavbar></app-homenavbar>
+<div class="bodymodel">
+  <div class="model">
+    <div class="payment-success-container">
+      <h2>Payment Successful! 🎉</h2>
+      <p>Votre compte est actuellement en cours d'examen et sera vérifié dans les 48 heures..</p>
+      <button style="--clr: #f54242;" routerLink="/">Retour à l'accueil</button>
+    </div>
+  </div>
 </div>
+
+<app-homefooter></app-homefooter>
