--- a/frontend/src/app/shared/layout/homenavbar/homenavbar.component.html
+++ b/frontend/src/app/shared/layout/homenavbar/homenavbar.component.html
@@ -35,7 +35,7 @@
              
           }
           @if(_user.isLoggedIn()==false){
-            <a href="#" class="btn btn-outline-dark me-2">Adhérer</a>
+            <a routerLink="/signup" class="btn btn-outline-dark me-2">Adhérer</a>
             <a routerLink="/login" class="btn btn-dark">Login</a>
           }
         
