--- a/frontend/src/app/pages/login/verficationsend/verficationsend.component.html
+++ b/frontend/src/app/pages/login/verficationsend/verficationsend.component.html
@@ -52,7 +52,7 @@
                         </div>
 
                         <div class="mt-4 mt-md-5 text-center">
-                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                          <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Membra. Crafted with <i class="mdi mdi-heart text-danger"></i> by AdemBenChiboub</p>
                         </div>
                     </div>
                     
